# Homework-Web-13-Django

./: pyproject.toml  readme.md
quotes_site/authors/: forms.py  urls.py  views.py
quotes_site/authors/templates/authors/: add_author.html  authors_page.html
quotes_site/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_site/quotes/migrations/: 0001_initial.py
quotes_site/quotes/static/quotes/: style.css
quotes_site/quotes/templates/quotes/: add_quote.html  base.html  index.html
quotes_site/quotes/templatetags/: extract.py
quotes_site/quotes_site/: settings.py  urls.py
quotes_site/tags/: forms.py  urls.py  views.py
quotes_site/tags/templates/tags/: quotes_by_tag.html  tag.html
quotes_site/users/: forms.py  urls.py  views.py
quotes_site/users/templates/users/: login.html  profile.html  singup.html
quotes_site/utils/: add_quotes_to_db.py  migration.py
