[tool.poetry]
name = "homework-web-13-Django"
version = "0.1.0"
description = ""
authors = ["oleksandr-study <140350329+oleksandr-study@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
django = "^5.0.3"
pymongo = "^4.6.2"
django-environ = "^0.11.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
